* GetRandomPercentSeeded
* IsReferenceCloned
* AdvanceSeed

//===v1.15

===Misc:
* When the game starts, there is now a console print that says if ShowOff is running and what version it's at.
* Optimized GetEquipped__ functions.

===DEFAULT BEHAVIOR CHANGES:
*GetEquipped__ functions now account for items that have no equip slots (I didn't realize they could be equipped), no matter what the equip slot filters are.
In order to filter those out, there is now a new flag: NoSlotlessItems

===Bug Fixes:
* Fixed certain GetEquipped__ functions always printing to console
* Add RandSeeded safety check (Min must be <= Max) - before, breaking this assertion caused a crash. Returns -1 if this assertion fails.
* Fix GetRandomizerSeed returning NAN (returns -1 for errors now).

===New Functions:
* IsTemporaryReference - this should be kept undocumented, I didn't sufficiently test it.
* GetPCHasScriptedFastTravelOverride
* GetPCCanFastTravel
* WeaponHasFlag
* ActorHasBaseFlag
* RemoveAllItemsShowOff


//===v1.17

===New Functions:
* ForceWeaponJamAnim
* DisableAlt
* EnableAlt
* GetCalculatedSkillPoints
* GetLevelUpMenuPoints
* ToggleQuestMessages


//===v1.20

===Bug Fixes:
* ToggleQuestMessages now also silences quest objective messages.
* GetLevelUpMenuPoints now accounts for iLevelsPerPerk gamesetting (and skipping getting perks each level or so). Thanks Stewie!

===New Functions:
* GetCalculatedPerkPoints
* GetLevelUpMenuCurrentPage
* SetLevelUpMenuCurrentPage
* ShowPerkMenu


//===v1.25

===Changes:
* GetNumActorsInRangeFromRef and GetNumCombatActorsFromActor both have a new OnlyDetectedActors filter flag.
* GetCreatureTurningSpeed and GetCreatureFootWeight are made available as condition functions.

===Bug Fixes:
*

===New Functions:
* ShowSkillMenu
* GetLevelUpMenuUnspentPoints
* SetLevelUpMenuCanExitEarly
* SetLevelUpMenuPoints




(Template:)
//===v???
===Bug Fixes:
* 

===New Functions:
*

******DON'T FORGET TO UPDATE THE PLUGIN VERSION BEFORE EVERY RELEASE*********